Fix height of editor overflowing

--- a/BlazorStudio.RazorLib/wwwroot/blazorStudio.css
+++ b/BlazorStudio.RazorLib/wwwroot/blazorStudio.css
@@ -351,6 +351,8 @@
 
 .bstudio_editor-tabs-listing {
     display: flex;
+    height: 2rem;
+    margin-bottom: 10px;
 }
 
 .bstudio_editor-tab-display {
